--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hapi1",
   "version": "1.0.0",
   "description": "Home automation test UI.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,27 +14,14 @@
   "author": "Scott Olson",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.3.15",
-    "good": "^5.1.2",
-    "good-console": "^4.1.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compress": "^0.13.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.10.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-html2js": "^0.3.2",
-    "grunt-karma": "^0.10.1",
-    "grunt-sass": "^0.18.1",
-    "hapi": "^8.2.0",
-    "karma": "^0.12.31",
-    "ng-slider": "^2.2.6",
-    "nunjucks-hapi": "^1.1.0",
-    "restangular": "^1.5.1",
+    "gulp": "^3.8.11",
+    "gulp-cached": "^1.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-footer": "^1.0.5",
+    "gulp-header": "^1.2.2",
+    "gulp-jshint": "^1.10.0",
+    "gulp-remember": "^0.3.0",
+    "gulp-sass": "^2.0.0",
     "underscore": "^1.8.3"
   }
 }
