--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,3 @@
 {
-  "remotes": [
-    {"key": "receiver", "title": "Receiver"},
-    {"key": "tv", "title": "TV"},
-    {"key": "ps3", "title": "PS3"}
-  ]
+  "CONTROLLER_API_URL": "http://192.168.8.10:4001"
 }
