--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-footer": "^1.0.5",
     "gulp-header": "^1.2.2",
     "gulp-jshint": "^1.10.0",
+    "gulp-ng-config": "^1.2.1",
     "gulp-remember": "^0.3.0",
     "gulp-sass": "^2.0.0",
     "underscore": "^1.8.3"
