--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "angular-bootstrap-switch": "~0.4.1",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "angular-bootstrap": "~0.13.0"
   }
 }
