--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gulp": "^3.8.11",
     "gulp-cached": "^1.1.0",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-footer": "^1.0.5",
     "gulp-header": "^1.2.2",
