Default to en_US locale

--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,4 @@
 {
-  "CONTROLLER_API_URL": "http://192.168.8.10/rosie_api"
+  "CONTROLLER_API_URL": "http://192.168.8.10/rosie_api",
+  "DEFAULT_LOCALE": "en_US"
 }
