--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.8.11",
+    "gulp-angular-translate": "^0.1.4",
     "gulp-cached": "^1.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
