--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
   ],
   "dependencies": {
     "angular-ui-router": "~0.2.15",
-    "angular": "~1.4.1",
+    "angular": "~1.4.2",
     "ng-slider": "~2.3.7",
     "restangular": "~1.5.1",
     "underscore": "~1.8.3",
@@ -32,6 +32,7 @@
     "fontawesome": "~4.3.0",
     "angular-bootstrap": "~0.13.0",
     "angular-translate": "~2.7.2",
-    "angular-sanitize": "~1.4.2"
+    "angular-sanitize": "~1.4.2",
+    "angular-moment": "~0.10.1"
   }
 }
