--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,8 @@
     "angular-translate": "~2.7.2",
     "angular-sanitize": "~1.4.2",
     "angular-moment": "~0.10.1",
-    "bootstrap-ui-datetime-picker": "~1.1.5"
+    "bootstrap-ui-datetime-picker": "~1.1.5",
+    "js-data-angular": "~3.0.0",
+    "js-data": "~2.3.0"
   }
 }
