--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,4 +1,5 @@
 {
   "CONTROLLER_API_URL": "http://192.168.8.10/rosie_api",
+  "GARAGE_API_URL": "http://192.168.8.50/garage_api",
   "DEFAULT_LOCALE": "en_US"
 }
