--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-jshint": "^1.10.0",
     "gulp-ng-config": "^1.2.1",
     "gulp-remember": "^0.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.0",
     "underscore": "^1.8.3"
   }
