--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,5 +1,5 @@
 {
-  "CONTROLLER_API_URL": "http://192.168.8.10/rosie_api",
-  "GARAGE_API_URL": "http://192.168.8.50/garage_api",
+  "CONTROLLER_API_URL": "http://localhost/rosie_api",
+  "GARAGE_API_URL": "http://localhost/garage_api",
   "DEFAULT_LOCALE": "en_US"
 }
